# KeyEngine

./: .gitignore  AGENTS.md  CMakeLists.txt  KeyEngine.sln  LICENSE  README.md
Content/: Register.bat
Content/Templates/Project/: CMakeLists.txt.mustache  LICENSE  Project.keyproject.mustache  Project.sln.mustache
Content/Templates/Project/Source/: Main.cpp  MyComponent.cpp  MyComponent.h  Project.h  Project.vcxproj  Project.vcxproj.mustache  ProjectConfig.h
Content/Templates/Project/Source/.Generated/: ReflectionData.Generated.h
Content/Templates/ReflectionParser/: attribute-initializer.mustache  reflection-data.mustache
Dependencies/: CMakeLists.txt  dependencies.txt
Dependencies/assimp/lib/: assimp-vc140-mt.lib
Dependencies/mustache/: README.md  mustache.hpp
Dependencies/qtpropertybrowser/src/: qtbuttonpropertybrowser.cpp  qteditorfactory.cpp  qteditorfactory.h  qtpropertybrowser.cpp  qtpropertybrowser.h  qtpropertymanager.cpp  qtpropertymanager.h  qttreepropertybrowser.cpp  qtvariantproperty.cpp
Dependencies/rapidjson/: readme.md
Dependencies/rapidjson/include/rapidjson/: reader.h
Examples/Project/: Build.bat  LICENSE  Project.keyproject  Project.sln
Examples/Project/Source/: Main.cpp  MyComponent.cpp  MyComponent.h  Project.h  Project.vcxproj.filters  ProjectConfig.h
Examples/Project/Source/.Generated/: ReflectionData.Generated.h
Source/Editor/: Editor.h  Editor.vcxproj  Editor.vcxproj.filters  EditorConfig.h  Main.cpp
Source/Editor/Editor/: Module.cpp  Module.h  ModuleManager.cpp  ModuleManager.h
Source/EditorApp/: ContentBrowserWidget.cpp  ContentBrowserWidget.h  EditorApp.vcxproj  EditorApp.vcxproj.filters  EditorAppConfig.h  IconManager.cpp  IconManager.h  InspectorWidget.cpp  InspectorWidget.h  LayoutConstants.h  MainWindow.cpp  MainWindow.h  NewProjectDialog.cpp  NewProjectDialog.h  OutlinerWidget.cpp  OutlinerWidget.h  Utils.cpp  Utils.h  WindowLabels.h  main.cpp
Source/EditorApp/Forms/: ContentBrowserWidget.ui  InspectorWidget.ui  MainWindow.ui  NewProjectDialog.ui
Source/EditorApp/Resources/: Editor.rc
Source/EditorApp/Resources/Icons/: icons.qrc
Source/EditorApp/Resources/Styles/Dark/: dark.qrc  style.qss
Source/EditorApp2/: ContentBrowserWidget.cpp  IconManager.cpp  InspectorWidget.cpp  InspectorWidget.h  MainWindow.h  Utils.cpp  Utils.h  main.cpp
Source/ProjectCreator/: Creator.cpp  Creator.h  CreatorConfig.h  CreatorOptions.h  Main.cpp  ProjectCreator.vcxproj  ProjectCreator.vcxproj.filters  Templates.h  Utils.cpp  Utils.h
Source/ReflectionParser/: Attributes.cpp  Attributes.h  Class.cpp  Class.h  Cursor.cpp  Cursor.h  CursorType.cpp  CursorType.h  Field.cpp  Field.h  LanguageType.cpp  LanguageType.h  Main.cpp  Namespace.h  Parser.cpp  Parser.h  ParserConfig.h  ParserOptions.h  ReflectionParser.vcxproj  ReflectionParser.vcxproj.filters  Reserved.h  Templates.h  Utils.cpp  Utils.h
Source/Runtime/: Main.cpp  Platform.h  Runtime.h  Runtime.vcxproj  Runtime.vcxproj.filters  RuntimeConfig.h
Source/Runtime/Core/: Object.h  Utils.cpp  Utils.h
Source/Runtime/Game/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  MessageType.h  Messages.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h  TransformSpace.h
Source/Runtime/Reflection/: Any.cpp  Any.h  Attribute.h  Attributes.cpp  Attributes.h  AttributesContainer.cpp  AttributesContainer.h  Constructor.cpp  Constructor.h  Destructor.cpp  Destructor.h  Enum.cpp  Enum.h  Field.cpp  Field.h  Package.cpp  Package.h  Reflection.h  ReflectionData.cpp  ReflectionData.h  ReflectionManager.cpp  ReflectionManager.h  Type.cpp  Type.h  TypeConfig.h  TypeData.cpp  TypeData.h  TypeInfo.h
Source/Runtime/Resource/: Archive.cpp  Archive.h  JsonArchive.cpp  JsonArchive.h  Resource.cpp  Resource.h  ResourceEvent.h  ResourceEventReceiver.h  ResourceManager.cpp  ResourceManager.h  ResourceState.h  SerializeTypes.h
